--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                         <div class="delivery-info__text">Фиксированная цена</div>
                     </div>
                     <div class="tablet-banner__image">
-                        <img src="img/banner/deliveryman_other_device.png" class="mobile-banner__image" alt=""/>
+                        <img src="img/banner/deliveryman_other_device.png" class="mobile-banner__image" alt="доставщик для других устройств"/>
                     </div>
                 </div>
                 <div class="banner__image">
-                    <img src="img/banner/deliveryman.png" alt=""/>
+                    <img src="img/banner/deliveryman.png" alt="доставщик"/>
                 </div>
             </div>
         </section>
@@ -76,9 +76,8 @@
                 <h1 class="process-info__title">Как это происходит?</h1>
                 <div class="process-info__list">
                     <div class="process-item">
-                        <div class="item-img">
-                            <img src="img/icons/nums/01.svg" class="item-desktop__img item-tablet__img item-mobile__img"
-                                 alt="цифра 01">
+                        <div class="block-step-num">
+                            <p class="step-num">01</p>
                         </div>
                         <div class="process-block__item">
                             <div class="process-item__title">Оценка объема предстоящих работ</div>
@@ -92,9 +91,8 @@
                         </div>
                     </div>
                     <div class="process-item">
-                        <div class="item-img">
-                            <img src="img/icons/nums/02.svg" class="item-desktop__img item-tablet__img item-mobile__img"
-                                 alt="цифра 02">
+                        <div class="block-step-num">
+                            <p class="step-num">02</p>
                         </div>
                         <div class="process-block__item">
                             <div class="process-item__title">Упаковка вещей</div>
@@ -108,9 +106,8 @@
                         </div>
                     </div>
                     <div class="process-item">
-                        <div class="item-img">
-                            <img src="img/icons/nums/03.svg" class="item-desktop__img item-tablet__img item-mobile__img"
-                                 alt="цифра 03">
+                        <div class="block-step-num">
+                            <p class="step-num">03</p>
                         </div>
                         <div class="process-block__item">
                             <div class="process-item__title">Погрузка и транспортировка</div>
@@ -124,9 +121,8 @@
                         </div>
                     </div>
                     <div class="process-item">
-                        <div class="item-img">
-                            <img src="img/icons/nums/04.svg" class="item-desktop__img item-tablet__img item-mobile__img"
-                                 alt="цифра 04">
+                        <div class="block-step-num">
+                            <p class="step-num">04</p>
                         </div>
                         <div class="process-block__item">
                             <div class="process-item__title">Распаковка и расстановка мебели</div>
@@ -261,7 +257,7 @@
                         <div class="comment-info">
                             <div class="comment-date">24.03.2021</div>
                             <div class="comment-rate">
-                                <img src="img/icons/review/starz.svg" alt="Оценка 5 звезд">
+                                <img src="img/icons/review/starz.svg" alt="Оценка 5 звезд"/>
                             </div>
                         </div>
                         <p class="comment-text">Обращение к вам за помощью в переезде оставило только положительные
@@ -279,7 +275,7 @@
                         <div class="comment-info">
                             <div class="comment-date">13.09.2021</div>
                             <div class="comment-rate">
-                                <img src="img/icons/review/starz.svg" alt="Оценка 5 звезд">
+                                <img src="img/icons/review/starz.svg" alt="Оценка 5 звезд"/>
                             </div>
                         </div>
                         <p class="comment-text">Сегодня ( 13.09.2021 ) мы переехали. Остались очень довольны, несмотря
@@ -296,7 +292,7 @@
                         <div class="comment-info">
                             <div class="comment-date">11.11.2021</div>
                             <div class="comment-rate">
-                                <img src="img/icons/review/starz.svg" alt="Оценка 5 звезд">
+                                <img src="img/icons/review/starz.svg" alt="Оценка 5 звезд"/>
                             </div>
                         </div>
                         <p class="comment-text">Могу на 100% порекомендовать компанию MOVEE и отметить, что цены
@@ -310,7 +306,7 @@
                     </div>
                 </div>
                 <div class="reviews-dots">
-                    <img src="img/icons/review/pagination.svg" class="review-dots" alt="пагинация">
+                    <img src="img/icons/review/pagination.svg" class="review-dots" alt="пагинация"/>
                 </div>
                 <div class="review-block__btn">
                     <a class="review-btn">Все отзывы</a>
@@ -325,8 +321,8 @@
                 <form method="post" action="/form-submit">
                     <h2 class="form-title">Мы перезвоним в течении 10 секунд</h2>
                     <div class="block-contact__input">
-                        <input class="contact-input" type="text" placeholder="Ваше имя">
-                        <input class="contact-input" type="text" placeholder="Телефон">
+                        <input class="contact-input" type="text" placeholder="Ваше имя"/>
+                        <input class="contact-input" type="text" placeholder="Телефон"/>
                     </div>
                     <div class="select-location">
                         <div class="select-region">
@@ -356,7 +352,7 @@
                         <h2 class="label-title">Способ оплаты</h2>
                         <div class="block-radio-btn">
                             <div class="radio-btn">
-                                <input class="radio-input" type="radio" name="pay-method" id="cash">
+                                <input class="radio-input" type="radio" name="pay-method" id="cash"/>
                                 <label class="radio-inp-text" for="cash">Наличные курьеру</label>
                             </div>
                             <div class="radio-btn">
@@ -371,7 +367,7 @@
                     </div>
                     <div class="additional-services">
                         <h2 id="additional-service__title" class="additional-services__title">Дополнительные услуги
-                            <img id="arrow-services" src="img/icons/arrows/up.svg" alt="Стрелка вверх">
+                            <img id="arrow-services" src="img/icons/arrows/up.svg" alt="Стрелка вверх"/>
                         </h2>
                         <div class="additional-services-checkbox">
                             <input class="additional-input" type="checkbox" id="call-a-measurer"
@@ -464,17 +460,17 @@
                     <div class="phone-underline"></div>
                 </div>
                 <div class="social">
-                    <a href="#">
-                        <img class="social-img" src="/img/icons/footer/youtube.svg" alt="ютуб"/>
+                    <a href="https://www.youtube.com/">
+                        <img class="social-img" src="img/icons/footer/youtube.svg" alt="ютуб"/>
                     </a>
-                    <a href="#">
-                        <img class="social-img" src="/img/icons/footer/vk.svg" alt="вк"/>
+                    <a href="https://vk.com/">
+                        <img class="social-img" src="img/icons/footer/vk.svg" alt="вк"/>
                     </a>
-                    <a href="#">
+                    <a href="https://www.facebook.com/">
                         <img class="social-img" src="img/icons/footer/fb.svg" alt="фейсбук"/>
                     </a>
-                    <a href="#">
-                        <img class="social-img" src="/img/icons/footer/inst.svg" alt="инстаграм"/>
+                    <a href="https://www.instagram.com/">
+                        <img class="social-img" src="img/icons/footer/inst.svg" alt="инстаграм"/>
                     </a>
                 </div>
             </div>
