--- a/index.html
+++ b/index.html
@@ -197,53 +197,124 @@
                     <div class="fleet__text">10 видов автомобилей от 800 кг до 10 тонн</div>
                 </div>
                 <div class="fleet-select__buttons">
-                    <a class="fleet-btn">Газели</a>
-                    <a class="fleet-btn">Каблуки</a>
-                    <a class="fleet-btn">Грузовики</a>
+                    <button id="gazel-btn" class="fleet-btn">Газели</button>
+                    <button id="kabluk-btn" class="fleet-btn">Каблуки</button>
+                    <button id="truck-btn" class="fleet-btn">Грузовики</button>
                 </div>
+
                 <div class="slider_cards">
                     <div class="arrow-slider">
-                        <img src="img/icons/arrows/left.svg" alt="Стрелка влево"/>
+                        <img src="img/icons/arrows/left.svg" class="arrow-slider-left" alt="Стрелка влево"/>
                     </div>
-                    <div class="fleet-card__content">
-                        <div class="fleet-card__title">Газель 3 метра</div>
-                        <div class="fleet-card__list">
-                            <div class="fleet-card-item">
-                                <div class="check-icon">&#10004;</div>
-                                <div class="fleet-card__text">Ширина 2 м</div>
+                    <div class="sliders">
+                        <div class="slide">
+                            <div class="fleet-card__content">
+                                <div class="fleet-card__title">Газель 3 метра</div>
+                                <div class="fleet-card__list">
+                                    <div class="fleet-card-item">
+                                        <div class="check-icon">&#10004;</div>
+                                        <div class="fleet-card__text">Ширина 2 м</div>
+                                    </div>
+                                    <div class="fleet-card-item">
+                                        <div class="check-icon">&#10004;</div>
+                                        <div class="fleet-card__text">Высота 2 м</div>
+                                    </div>
+                                    <div class="fleet-card-item">
+                                        <div class="check-icon">&#10004;</div>
+                                        <div class="fleet-card__text">Объем 16 м&sup3;</div>
+                                    </div>
+                                    <div class="fleet-card-item">
+                                        <div class="check-icon">&#10004;</div>
+                                        <div class="fleet-card__text">Грузоподъемность 1,5 т</div>
+                                    </div>
+                                </div>
+                                <div class="fleet-card-item__other-view">
+                                    <div class="fleet-card__text">Газель 3 метра / 1,5 тонны</div>
+                                </div>
+                                <div class="fleet-dots">
+                                    <img src="img/icons/fleet/posit-dots.svg" class="fleet-dots__img" alt="">
+                                </div>
+                                <div class="fleet-card-btn">
+                                    <a class="card-btn">Заказать</a>
+                                </div>
                             </div>
-                            <div class="fleet-card-item">
-                                <div class="check-icon">&#10004;</div>
-                                <div class="fleet-card__text">Высота 2 м</div>
-                            </div>
-                            <div class="fleet-card-item">
-                                <div class="check-icon">&#10004;</div>
-                                <div class="fleet-card__text">Объем 16 м&sup3;</div>
-                            </div>
-                            <div class="fleet-card-item">
-                                <div class="check-icon">&#10004;</div>
-                                <div class="fleet-card__text">Грузоподъемность 1,5 т</div>
-                            </div>
-                            <div class="fleet-card-item__other-view">
-                                <div class="fleet-card__text">Газель 3 метра / 1,5 тонны</div>
-                            </div>
-                            <!--                            <div class="fleet-card-item__other-view">-->
-                            <!--                                <div class="fleet-card__text">Каблук 2 метра / 0,8 тонны</div>-->
-                            <!--                            </div>     -->
-                            <!--                            <div class="fleet-card-item__other-view">-->
-                            <!--                                <div class="fleet-card__text">Грузовик 3 метра / 2 тонны</div>-->
-                            <!--                            </div>-->
-                            <div class="fleet-dots">
-                                <img src="img/icons/fleet/posit-dots.svg" class="fleet-dots__img" alt="">
+                            <div class="fleet-card__image">
+                                <img src="img/fleet/gazel.png" class="card-image" alt="Газель"/>
                             </div>
                         </div>
-                        <a class="card-btn">Заказать</a>
-                    </div>
-                    <div class="fleet-card__image">
-                        <img src="img/fleet/gazel.png" class="card-image" alt="Газель"/>
+                        <div class="slide">
+                            <div class="fleet-card__content">
+                                <div class="fleet-card__title">Каблук 3 метра</div>
+                                <div class="fleet-card__list">
+                                    <div class="fleet-card-item">
+                                        <div class="check-icon">&#10004;</div>
+                                        <div class="fleet-card__text">Ширина 1.8 м</div>
+                                    </div>
+                                    <div class="fleet-card-item">
+                                        <div class="check-icon">&#10004;</div>
+                                        <div class="fleet-card__text">Высота 1.2 м</div>
+                                    </div>
+                                    <div class="fleet-card-item">
+                                        <div class="check-icon">&#10004;</div>
+                                        <div class="fleet-card__text">Объем 8 м&sup3;</div>
+                                    </div>
+                                    <div class="fleet-card-item">
+                                        <div class="check-icon">&#10004;</div>
+                                        <div class="fleet-card__text">Грузоподъемность 0.8 т</div>
+                                    </div>
+                                </div>
+                                <div class="fleet-card-item__other-view">
+                                    <div class="fleet-card__text">Каблук 2 метра / 0,8 тонны</div>
+                                </div>
+                                <div class="fleet-dots">
+                                    <img src="img/icons/fleet/posit-dots.svg" class="fleet-dots__img" alt="">
+                                </div>
+                                <div class="fleet-card-btn">
+                                    <a class="card-btn">Заказать</a>
+                                </div>
+                            </div>
+                            <div class="fleet-card__image">
+                                <img src="img/fleet/largus.png" class="card-image" alt="каблук"/>
+                            </div>
+                        </div>
+                        <div class="slide">
+                            <div class="fleet-card__content">
+                                <div class="fleet-card__title">Грузовик  3 метра</div>
+                                <div class="fleet-card__list">
+                                    <div class="fleet-card-item">
+                                        <div class="check-icon">&#10004;</div>
+                                        <div class="fleet-card__text">Ширина 3 м</div>
+                                    </div>
+                                    <div class="fleet-card-item">
+                                        <div class="check-icon">&#10004;</div>
+                                        <div class="fleet-card__text">Высота 3 м</div>
+                                    </div>
+                                    <div class="fleet-card-item">
+                                        <div class="check-icon">&#10004;</div>
+                                        <div class="fleet-card__text">Объем 20 м&sup3;</div>
+                                    </div>
+                                    <div class="fleet-card-item">
+                                        <div class="check-icon">&#10004;</div>
+                                        <div class="fleet-card__text">Грузоподъемность 2 т</div>
+                                    </div>
+                                </div>
+                                <div class="fleet-card-item__other-view">
+                                    <div class="fleet-card__text">Грузовик 3 метра / 2 тонны</div>
+                                </div>
+                                <div class="fleet-dots">
+                                    <img src="img/icons/fleet/posit-dots.svg" class="fleet-dots__img" alt="">
+                                </div>
+                                <div class="fleet-card-btn">
+                                    <a class="card-btn">Заказать</a>
+                                </div>
+                            </div>
+                            <div class="fleet-card__image">
+                                <img src="img/fleet/truck.png" class="card-image" alt="грузовик"/>
+                            </div>
+                        </div>
                     </div>
                     <div class="arrow-slider">
-                        <img src="img/icons/arrows/right.svg" alt="Стрелка вправо"/>
+                        <img src="img/icons/arrows/right.svg" class="arrow-slider-right" alt="Стрелка вправо"/>
                     </div>
                 </div>
             </div>
