--- a/index.html
+++ b/index.html
@@ -465,8 +465,10 @@
                             <div id="orderDiscountTime" class="order-discount-time">05:37:25</div>
                         </div>
                         <div class="block-submit-order">
-                            <div class="form-border"></div>
-                            <button type="submit" class="form-btn"></button>
+                            <div class="block-btn">
+                                <div class="form-border"></div>
+                                <button type="submit" class="form-btn"></button>
+                            </div>
                             <div class="data-processing__checkbox">
                                 <input class="data-processing" type="checkbox" id="data-processing"
                                        name="data-processing"/>
